@@ -2161,6 +2161,8 @@ ConfigView.section.ipfilter.enable.descriptionCache=Store IP descriptions in scr
 ConfigView.section.ipfilter.enable.descriptionCache.tooltip=When disabled, descriptions will not be remembered
 
 OpenTorrentWindow.filesInfo=%1 of %2 will be downloaded.
+OpenTorrentWindow.diskUsage=%1 of %2
+
 ConfigView.label.openmytorrents=Open 'My Torrents' on startup
 ConfigView.label.open_transfer_bar_on_start=Open Transfer Bar on startup
 ConfigView.section.style.DNDalwaysInIncomplete=Always show torrents with 'Do Not Download' files in Incomplete section of My Torrents  
