@@ -4,6 +4,7 @@ AZUREUS CHANGELOG
 2007.09.xx | v3.0.2.3_CVS
 
 FEATURE: Core | Added experimental support for LibTorrent extension protocol handshake [amc1]
+FEATURE: UI   | Added available disk space indicators to the torrent open dialog (requires Java 1.6) [The 8472]
 FEATURE: UI   | Added "handshake reserved bytes" column in peer view [amc1]
 FEATURE: UI   | Added "Open Transfer Bar on start" and "Remember Transfer Bar" location options [amc1]
 
